--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,5 @@ services:
       - "8080:80"
     restart: always
     environment:
-      - REMOOTIO_IP=${VITE_REMOOTIO_IP}
+      - REMOOTIO_IP=${REMOOTIO_IP:-192.168.1.104}
+      - REMOOTIO_PORT=${REMOOTIO_PORT:-887}
