--- a/package.json
+++ b/package.json
@@ -42,13 +42,11 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
-    "@types/crypto-js": "^4.2.2",
     "baseline-browser-mapping": "^2.9.11",
     "caniuse-lite": "^1.0.30001761",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.5.1",
@@ -62,12 +60,10 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
-    "remootio-api-client": "^2.0.4",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -90,7 +86,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19",
-    "ws": "^8.18.3"
+    "vite": "^5.4.19"
   }
 }
