--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "baseline-browser-mapping": "^2.9.11",
+    "buffer": "^6.0.3",
     "caniuse-lite": "^1.0.30001761",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
